[gd_scene load_steps=20 format=3 uid="uid://qr631wwjelt8"]

[ext_resource type="Theme" uid="uid://cuxkfo2hoq3nw" path="res://assets/themes/big_button.tres" id="1_j7xy3"]
[ext_resource type="Script" path="res://src/scripts/game_elements/settings.gd" id="1_lgcap"]
[ext_resource type="Texture2D" uid="uid://bdd4dxd2v76q2" path="res://assets/ui/custom_ui/MusicOn.png" id="1_stmaj"]
[ext_resource type="Texture2D" uid="uid://cyy7y8extu03i" path="res://assets/ui/custom_ui/MusicOff.png" id="2_6mo0o"]
[ext_resource type="Theme" uid="uid://co13fsq8rktbh" path="res://assets/themes/slider.tres" id="3_cjpot"]
[ext_resource type="Texture2D" uid="uid://d2qgbugj18ace" path="res://assets/ui/custom_ui/SoundOn.png" id="3_g2tlc"]
[ext_resource type="Texture2D" uid="uid://mchymmm64i5y" path="res://assets/ui/custom_ui/SoundOff.png" id="4_cfg75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypick"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.701961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkqk8"]
bg_color = Color(0.988235, 0.956863, 0.862745, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.960784, 0.878431, 0.635294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.305882, 0.305882, 0.305882, 1)
shadow_size = 10
shadow_offset = Vector2(2, 5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eskfo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_julh6"]
texture = ExtResource("1_stmaj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_piuv4"]
texture = ExtResource("1_stmaj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7jixt"]
texture = ExtResource("2_6mo0o")

[sub_resource type="Theme" id="Theme_s7sne"]
Button/styles/focus = SubResource("StyleBoxEmpty_eskfo")
Button/styles/hover = SubResource("StyleBoxTexture_julh6")
Button/styles/normal = SubResource("StyleBoxTexture_piuv4")
Button/styles/pressed = SubResource("StyleBoxTexture_7jixt")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o17ch"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xf1rn"]
texture = ExtResource("3_g2tlc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_beqss"]
texture = ExtResource("3_g2tlc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mwa0m"]
texture = ExtResource("4_cfg75")

[sub_resource type="Theme" id="Theme_xyaol"]
Button/styles/focus = SubResource("StyleBoxEmpty_o17ch")
Button/styles/hover = SubResource("StyleBoxTexture_xf1rn")
Button/styles/normal = SubResource("StyleBoxTexture_beqss")
Button/styles/pressed = SubResource("StyleBoxTexture_mwa0m")

[node name="Settings" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgcap")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ypick")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkqk8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Настройки"
horizontal_alignment = 1

[node name="Music" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 10

[node name="MusicButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_s7sne")
toggle_mode = true

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(320, 45)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_cjpot")
max_value = 10.0
value = 10.0

[node name="NumderMusic" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "10"
horizontal_alignment = 1

[node name="Sound" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 10

[node name="SoundButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Sound"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_xyaol")
toggle_mode = true

[node name="SoundSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/Sound"]
custom_minimum_size = Vector2(320, 45)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_cjpot")
max_value = 10.0
value = 7.0

[node name="NumberSound" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Sound"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "7"
horizontal_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 50

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("1_j7xy3")
theme_override_font_sizes/font_size = 40
text = "Отменить"

[node name="Apply" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("1_j7xy3")
theme_override_font_sizes/font_size = 40
text = "Применить"
